# testing_backend

./: db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
University_API/: asgi.py  settings.py  urls.py  wsgi.py
courses/: models.py  serializer.py  urls.py  views.py
courses/migrations/: 0001_initial.py
users/: serializer.py  urls.py  views.py
